Fix navbar alignment

--- a/app/assets/stylesheets/api/explore_create.scss
+++ b/app/assets/stylesheets/api/explore_create.scss
@@ -5,24 +5,37 @@
   font-size: 14px;
   font-family: 'Open Sans', sans-serif;
   font-weight: bold;
+  margin-right: 150px;
 }
 
 .leftnav span:first-child {
-  width: 150px;
+  width: 50px;
   position: absolute;
-  left: 50px;
+  left: 27px;
+  top: -32px;
+  padding: 20px 0 20px 25px;
+  align-items: center;
 }
 
-.leftnav span:last-child {
-  width: 150px;
-  position: absolute;
-  left: 140px;
+.leftnav span:hover {
+  border-bottom: 3px solid #2BDE73;
+  transition: all 0.15s ease;
 }
 
 .leftnav img {
   position: absolute;
-  right: 150px;
-  width: 18px;
+  right: 50px;
+  top: 21px;
+  width: 20px;
   height: 18px;
   margin-right: 5px;
+}
+
+.leftnav span:last-child {
+  width: 93px;
+  position: absolute;
+  left: 140px;
+  top: -32px;
+  padding: 20px 0;
+  align-items: center;
 }
