--- a/app/assets/stylesheets/api/navbar.scss
+++ b/app/assets/stylesheets/api/navbar.scss
@@ -31,7 +31,7 @@
 }
 
 .login-signup span > * {
-  padding: 20px 0;
+  padding: 21px 0;
   transition: all 0.15s ease;
 }
 
@@ -41,13 +41,13 @@
 }
 
 .login-signup span:first-child {
-  right: 125px;
+  right: 110px;
   top: -20px;
   width: 60px;
 }
 
 .login-signup span:last-child {
-  right: 35px;
+  right: 20px;
   top: -20px;
   width: 60px;
 }
