--- a/app/assets/stylesheets/api/project_index.scss
+++ b/app/assets/stylesheets/api/project_index.scss
@@ -88,7 +88,7 @@
 }
 
 .index_item:hover {
-  transform: translateY(-1px);
+  transform: translateY(-3px);
   box-shadow: -2px 5px 6px 2px rgba(0, 0, 0, 0.09);
   transition: all 0.2s ease-in-out;
 }
